# dosac

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: build.yml  python-app.yml
core/: admin.py  ai_core.py  consumers.py  forms.py  models.py  tools.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_citation.py  0004_document_processing_error.py
core/static/core/: document.js
core/templates/core/: base.html  chat.html  document-detail.html  document-list.html  document.html  email_sent.html  login.html
dosac/: asgi.py  settings.py  urls.py  wsgi.py
infrastrcuture/scw/: .terraform.lock.hcl  .terraform.tfstate.lock.info  deployment.yaml  helm.tf  main.tf  provider.tf  registry.tf  service.yaml  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
tests/: conftest.py  test_ai_core.py  test_consumers.py  test_models.py  test_tools.py  test_views.py
