[tool.poetry]
name = "dosac"
version = "0.1.0"
description = ""
authors = ["gecBurton <g.e.c.burton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
channels = {extras = ["daphne"], version = "^4.2.0"}
django = "^5.1.3"
django-q2 = "^1.7.4"
django-sesame = "^3.2.2"
langchain = "^0.3.9"
langchain-community = "^0.3.8"
langchain-openai = "^0.2.10"
langgraph = "^0.2.56"
pgvector = "^0.3.6"
psycopg2-binary = "^2.9.10"
python = "^3.12"
python-dotenv = "^1.0.1"
wikipedia-sections = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dosac.settings"